tests/idris2/perror008/expected
1/1: Building Issue710a (Issue710a.idr)
Error: Couldn't parse any alternatives:
1: Expected a capitalised identifier, got: r.

Issue710a:3:8--3:9
 1 | module Issue710a
 2 | 
 3 | record r where
            ^
... (1 others)
1/1: Building Issue710b (Issue710b.idr)
Error: Couldn't parse any alternatives:
1: Expected a capitalised identifier, got: r.

Issue710b:3:6--3:7
 1 | module Issue710b
 2 | 
 3 | data r : Type where
          ^
... (1 others)
1/1: Building Issue710c (Issue710c.idr)
Error: Couldn't parse any alternatives:
1: Expected a capitalised identifier, got: leaf.

Issue710c:5:3--5:7
 1 | infix 3 #
 2 | 
 3 | data T : Type where
 4 |   (#) : T -> T -> T
 5 |   leaf : T
       ^^^^
... (1 others)
1/1: Building Issue710d (Issue710d.idr)
Error: Couldn't parse any alternatives:
1: Expected a capitalised identifier, got: mkT.

Issue710d:2:15--2:18
 1 | record T where
 2 |   constructor mkT
                   ^^^
... (1 others)
1/1: Building Issue710e (Issue710e.idr)
Error: Expected a capitalised identifier, got: a.

Issue710e:3:11--3:12
 1 | %default total
 2 | 
 3 | namespace a
               ^

1/1: Building Issue710f (Issue710f.idr)
Error: Couldn't parse any alternatives:
1: Expected a capitalised identifier, got: cons.

Issue710f:2:15--2:19
 1 | interface Lalala where
 2 |   constructor cons
                   ^^^^
... (1 others)
Uncaught error: Error: Expected a capitalised identifier, got: ggg.

Issue1224a:1:8--1:11
 1 | module ggg
            ^^^

Uncaught error: Error: Expected a capitalised identifier, got: ggg.

Issue1224b:1:8--1:11
 1 | import ggg
            ^^^

